--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.1",
 	"main": "index.js",
 	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
 	"dependencies": {
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-proposal-decorators": "^7.6.0",
