--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"workspaces": [
 		"packages/*"
 	],
+	"scripts": {
+		"deploy": "npx lerna publish --scope packages/*"
+	},
 	"devDependencies": {
 		"lerna": "^3.16.4"
 	}
