--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -12,7 +12,13 @@
 		"@babel/plugin-proposal-export-default-from": "^7.5.2",
 		"@babel/plugin-proposal-optional-chaining": "^7.6.0",
 		"@babel/plugin-transform-runtime": "^7.6.2",
+		"@babel/preset-env": "^7.6.2",
+		"@babel/preset-react": "^7.0.0",
 		"babel-plugin-import": "^1.12.2",
-		"babel-plugin-module-resolver": "^3.2.0"
+		"babel-plugin-module-resolver": "^3.2.0",
+		"babel-plugin-transform-typescript-metadata": "^0.2.2"
+	},
+	"peerDependencies": {
+		"@babel/core": "^7.6.2"
 	}
 }
