--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"deploy": "npx lerna publish --scope packages/*"
+		"deploy": "npx lerna publish from-git"
 	},
 	"devDependencies": {
 		"lerna": "^3.16.4"
