--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"deploy": "npx lerna publish from-package"
+		"deploy": "npx lerna publish"
 	},
 	"devDependencies": {
 		"@schlagerkhan/eslint-fuckit-js": "^0.2.15",
