--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-	"extends": "@schlagerkhan/eslint-config-ts"
+	"extends": "@schlagerkhan/eslint-config-ts",
+	"settings": {
+		"import/resolver": {
+			"babel-module": {}
+		}
+	}
 }
