--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -16,6 +16,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-plugin-import": "^1.12.2",
 		"babel-plugin-module-resolver": "^3.2.0",
+		"babel-plugin-styled-components": "^1.10.6",
 		"babel-plugin-transform-typescript-metadata": "^0.2.2"
 	},
 	"peerDependencies": {
