--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -1,25 +1,22 @@
 {
-	"name": "@schlagerkhan/babel-preset-js",
-	"version": "0.0.6",
-	"main": "index.js",
-	"license": "MIT",
-	"publishConfig": {
-		"access": "public"
-	},
-	"dependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-decorators": "^7.6.0",
-		"@babel/plugin-proposal-export-default-from": "^7.5.2",
-		"@babel/plugin-proposal-optional-chaining": "^7.6.0",
-		"@babel/plugin-transform-runtime": "^7.6.2",
-		"@babel/preset-env": "^7.6.2",
-		"@babel/preset-react": "^7.0.0",
-		"babel-plugin-import": "^1.12.2",
-		"babel-plugin-module-resolver": "^3.2.0",
-		"babel-plugin-styled-components": "^1.10.6",
-		"babel-plugin-transform-typescript-metadata": "^0.2.2"
-	},
-	"peerDependencies": {
-		"@babel/core": "^7.6.2"
-	}
+  "name": "@schlagerkhan/babel-preset-js",
+  "version": "0.0.6",
+  "main": "index.js",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2"
+  }
 }
