--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "@schlagerkhan/babel-preset-js",
-  "version": "0.0.8",
-  "main": "index.js",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "babel-plugin-transform-typescript-metadata": "^0.2.2"
-  }
+	"name": "@schlagerkhan/babel-preset-js",
+	"version": "0.0.8",
+	"main": "index.js",
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-decorators": "^7.8.3",
+		"@babel/plugin-proposal-export-default-from": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.9.0",
+		"@schlagerkhan/babel-preset-base": "^0.0.1"
+	}
 }
