--- a/packages/babel-preset-ts/package.json
+++ b/packages/babel-preset-ts/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@babel/preset-typescript": "^7.8.3",
-		"@schlagerkhan/babel-preset-js": "^0.0.8"
+		"babel-plugin-transform-typescript-metadata": "^0.3.0",
+		"@schlagerkhan/babel-preset-base": "^0.0.1"
 	}
 }
