--- a/packages/babel-preset-base/package.json
+++ b/packages/babel-preset-base/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "@schlagerkhan/babel-preset-base",
-  "version": "0.1.2",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-styled-components": "^1.10.7"
-  }
+	"name": "@schlagerkhan/babel-preset-base",
+	"version": "0.1.2",
+	"main": "index.js",
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"@babel/preset-env": "^7.9.0",
+		"@babel/preset-react": "^7.9.4",
+		"babel-plugin-import": "^1.13.0",
+		"babel-plugin-module-resolver": "^4.0.0",
+		"babel-plugin-styled-components": "^1.10.7"
+	},
+	"gitHead": "15d12a6066b0965c831d18d291580b77964af636"
 }
