--- a/packages/babel-preset-ts/package.json
+++ b/packages/babel-preset-ts/package.json
@@ -10,5 +10,6 @@
 		"@babel/preset-typescript": "^7.8.3",
 		"@schlagerkhan/babel-preset-base": "^0.1.2",
 		"babel-plugin-transform-typescript-metadata": "^0.3.0"
-	}
+	},
+	"gitHead": "15d12a6066b0965c831d18d291580b77964af636"
 }
