--- a/packages/babel-preset-base/package.json
+++ b/packages/babel-preset-base/package.json
@@ -7,11 +7,18 @@
 		"access": "public"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-decorators": "^7.8.3",
 		"@babel/preset-env": "^7.9.0",
 		"@babel/preset-react": "^7.9.4",
 		"babel-plugin-import": "^1.13.0",
 		"babel-plugin-module-resolver": "^4.0.0",
 		"babel-plugin-styled-components": "^1.10.7"
 	},
-	"gitHead": "15d12a6066b0965c831d18d291580b77964af636"
+	"peerDependencies": {
+		"@babel/core": "^7.9.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0"
+	}
 }
