--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -7,11 +7,11 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.8.3",
-		"@babel/plugin-proposal-decorators": "^7.8.3",
 		"@babel/plugin-proposal-export-default-from": "^7.8.3",
 		"@babel/plugin-transform-runtime": "^7.9.0",
 		"@schlagerkhan/babel-preset-base": "^0.1.3"
 	},
-	"gitHead": "15d12a6066b0965c831d18d291580b77964af636"
+	"devDependencies": {
+		"@babel/core": "^7.9.0"
+	}
 }
