--- a/packages/babel-preset-js/package.json
+++ b/packages/babel-preset-js/package.json
@@ -11,6 +11,7 @@
 		"@schlagerkhan/babel-preset-base": "^0.1.5"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.9.0"
+		"@babel/core": "^7.9.6",
+		"@babel/plugin-proposal-export-default-from": "^7.8.3"
 	}
 }
